syntax = "proto3";
import "Protos/UserProfile/Common.proto";
import "google/protobuf/empty.proto";
option csharp_namespace = "DawnQuant.AShare.Api.UserProfile";

package DawnQuant.AShare.Api.UserProfile;


//配置信息
service SettingApi
{
//获取配置
  rpc GetSettingByUser(GetSettingByUserRequest) returns (GetSettingByUserResponse);

  //保存配置
  rpc SaveSetting(SaveSettingRequest) returns (google.protobuf.Empty);
 
}

message GetSettingByUserRequest
{
    int64 UserId=1;
}

message GetSettingByUserResponse
{
     string  Setting=1;
}

message SaveSettingRequest
{
     int64 UserId=1;
     string  Setting=2;
}
















